[package]
name = "apricot"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter-highlight = "0.20"
tree-sitter-html = "0.19"
tree-sitter-css = "0.19"
tree-sitter-json = "0.19"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-toml = "0.20"
tree-sitter-c = "0.20"
